@startuml

title __EXPRESSIONCALCULATOR's Class Diagram__\n

  namespace  {
    class CreateExpressionTree {
    }
  }
  

  namespace  {
    class ExpressionMain {
    }
  }
  

  namespace  {
    class ExpressionNode {
    }
  }
  

  namespace  {
    class ExpressionParse {
    }
  }
  

  namespace  {
    class ExpressionSolution {
    }
  }
  

  namespace  {
    class ExpressionTreeValidation {
    }
  }
  

  namespace  {
    class Operator {
    }
  }
  

  namespace  {
    class Precedence {
    }
  }
  

  namespace  {
    class SineOperands {
    }
  }
  

  namespace  {
    class Tokenizer {
    }
  }
  

  ExpressionNode o-- ExpressionNode : left
  ExpressionNode o-- ExpressionNode : right
  ExpressionTreeValidation o-- ExpressionNode : ExpressionRoot
  Tokenizer o-- Precedence : precedence


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
